fix word spacing

--- a/src/sass/01-atoms/text/_headings.scss
+++ b/src/sass/01-atoms/text/_headings.scss
@@ -38,7 +38,6 @@ h2 {
   max-width: $max-content-width;
   margin: auto;
   padding-bottom: $double-spacing;
-  word-spacing: -$half-spacing;
   text-transform: uppercase;
   color: $darkest-blue;
   font-family: $title-font;
