--- a/src/sass/01-atoms/text/_styles.scss
+++ b/src/sass/01-atoms/text/_styles.scss
@@ -39,7 +39,6 @@
   font-weight: $font-weight--light;
   font-style: italic;
   line-height: 1em;
-  word-spacing: -$half-spacing;
 }
 
 .darkest-blue {
