--- a/src/sass/03-organisms/_navigation.scss
+++ b/src/sass/03-organisms/_navigation.scss
@@ -84,7 +84,6 @@ footer {
     margin-bottom: $half-spacing;
     padding: $standard-spacing;
     text-align: left;
-    word-spacing: initial;
     text-transform: none;
     color: $white;
     text-shadow: none;
